--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Animais Fantásticos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:700|Playfair+Display+SC" rel="stylesheet">
   <script>document.documentElement.className += ' js';</script>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
-
 <body>
   <div class="grid-container">
     <nav class="menu" data-menu="suave">
       <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
       <ul data-menu="list" id="menu">
         <li><a href="#animais">Animais</a></li>
-        <li>
+        <li data-dropdown>
           <a href="sobre.html">Sobre</a>
           <ul class="dropdown-menu">
             <li><a href="empresa.html">A Empresa</a></li>
@@ -27,7 +26,7 @@
         </li>
         <li><a href="#faq">Faq</a></li>
         <li><a href="#contato">Contato</a></li>
-        <li><a data-modal="abrir" href="login.html">Login <span class="seta"></span></a></li>
+        <li><a data-modal="abrir" href="login.html">Login <span class="arrow-black"></span></a></li>
       </ul>
     </nav>
     <section class="grid-section animais" data-anime="scroll" id="animais">
@@ -61,7 +60,7 @@
           <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
             por um focinho comprido e uma cauda longa e peluda.</p>
         </section>
-
+        
         <section data-anime="show-right">
           <h2>Esquilo</h2>
           <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
@@ -164,6 +163,7 @@
         <li>+55 (21) 9999-9999</li>
         <li>Rua do Conde, nº 21</li>
         <li>Rio de Janeiro - RJ</li>
+        <li>Doe <span class="btc-preco">0</span> bitcoin para nos ajudar</li>
         <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8 às 18</li>
       </ul>
     </section>
@@ -185,7 +185,6 @@
       </form>
     </div>
   </section>
-  <script src="main.js"></script>
+  <script src="main.js"></script>  
 </body>
-
 </html>
